--- a/arc-request-workspace.html
+++ b/arc-request-workspace.html
@@ -18,8 +18,8 @@
     }
 
     .tabs-row {
-      background-color: var(--request-workspace-tabs-backgroud-color, rgba(0, 0, 0, 0.05));
-      border-bottom: 1px var(--request-workspace-tabs-border-color, #e5e5e5) solid;
+      background-color: var(--arc-request-workspace-tabs-backgroud-color, rgba(0, 0, 0, 0.05));
+      border-bottom: 1px var(--arc-request-workspace-tabs-border-color, #e5e5e5) solid;
       position: relative;
     }
 
@@ -29,7 +29,7 @@
         height: 100%;
         border-bottom: 0 solid transparent;
         font-style: normal;
-        color: var(--request-workspace-tabs-color, rgba(0,0,0,0.87));
+        color: var(--arc-request-workspace-tabs-color, rgba(0,0,0,0.87));
       };
     }
 
@@ -61,7 +61,7 @@
     }
 
     paper-tab.iron-selected {
-      background-color: var(--request-workspace-tabs-selected-background-color, #fff);
+      background-color: var(--arc-request-workspace-tabs-selected-background-color, #fff);
     }
 
     paper-tab {
@@ -105,7 +105,12 @@
   /**
    * `arc-request-workspace`
    *
-   * A request workspace component for Advanced REST Client that creates a list of requests
+   * A request workspace component for Advanced REST Client that creates a
+   * list of requests.
+   *
+   * The element does not contain any logic responsible for storing and restoring
+   * data. To use this component handle `preferences-store` and `preferences-read`
+   * custom events. See source for implementation detaild.
    *
    * ## Styling
    *
@@ -114,11 +119,15 @@
    * Custom property | Description | Default
    * ----------------|-------------|----------
    * `--arc-request-workspace` | Mixin applied to this elment | `{}`
+   * `--arc-request-workspace-tabs-backgroud-color` | | `rgba(0, 0, 0, 0.05)`
+   * `--arc-request-workspace-tabs-border-color` | | `#e5e5e5`
+   * `--arc-request-workspace-tabs-color` | | `rgba(0,0,0,0.87)`
+   * `--arc-request-workspace-tabs-selected-background-color` | | `#fff`
    *
    * @customElement
    * @polymer
    * @demo demo/index.html
-   * @memberof ApiElements
+   * @memberof UiElements
    */
   class ArcRequestWorkspace extends Polymer.Element {
     static get is() { return 'arc-request-workspace'; }
