--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <title>api-request-editor demo</title>
+    <base href="../">
     <script>
     if (location.search.indexOf('response_type') !== -1 &&
       location.search.indexOf('redirect_uri') !== -1) {
@@ -21,30 +22,43 @@
       location.href = red;
     }
     </script>
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../../shadycss/apply-shim.html">
-    <link rel="import" href="../../polymer/lib/elements/custom-style.html">
-    <link rel="import" href="../../polymer/lib/elements/dom-bind.html">
-    <link rel="import" href="../../app-pouchdb/pouchdb.html">
-    <link rel="import" href="../../neon-animation/web-animations.html">
-    <link rel="import" href="../../variables-evaluator/variables-evaluator.html">
-    <link rel="import" href="../../variables-manager/variables-manager.html">
-    <link rel="import" href="../../url-history-saver/url-history-saver.html">
-    <link rel="import" href="../../request-hooks-logic/request-hooks-logic.html">
-    <link rel="import" href="../../arc-request-logic/arc-request-logic.html">
-    <link rel="import" href="../../oauth-authorization/oauth2-authorization.html">
-    <link rel="import" href="../../oauth-authorization/oauth1-authorization.html">
-    <link rel="import" href="../../paper-dropdown-menu/paper-dropdown-menu.html">
-    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../../arc-data-generator/arc-data-generator.html">
-    <link rel="import" href="../../variables-editor/variables-editor.html">
-    <link rel="import" href="../../paper-styles/shadow.html">
-    <link rel="import" href="../arc-request-workspace.html">
+    <script src="../webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="../shadycss/apply-shim.html">
+    <link rel="import" href="../polymer/lib/elements/custom-style.html">
+    <link rel="import" href="../polymer/lib/elements/dom-bind.html">
+    <link rel="import" href="../app-pouchdb/pouchdb.html">
+    <link rel="import" href="../arc-models/project-model.html">
+    <link rel="import" href="../arc-models/request-model.html">
+    <link rel="import" href="../neon-animation/web-animations.html">
+    <link rel="import" href="../variables-evaluator/variables-evaluator.html">
+    <link rel="import" href="../variables-manager/variables-manager.html">
+    <link rel="import" href="../url-history-saver/url-history-saver.html">
+    <link rel="import" href="../request-hooks-logic/request-hooks-logic.html">
+    <link rel="import" href="../arc-request-logic/arc-request-logic.html">
+    <link rel="import" href="../oauth-authorization/oauth2-authorization.html">
+    <link rel="import" href="../oauth-authorization/oauth1-authorization.html">
+    <link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html">
+    <link rel="import" href="../iron-demo-helpers/demo-pages-shared-styles.html">
+    <link rel="import" href="../iron-demo-helpers/demo-snippet.html">
+    <link rel="import" href="../arc-data-generator/arc-data-generator.html">
+    <link rel="import" href="../variables-editor/variables-editor.html">
+    <link rel="import" href="../arc-electron-default-theme/arc-electron-default-theme.html">
+    <link rel="import" href="../paper-styles/shadow.html">
+    <link rel="import" href="../saved-menu/saved-menu.html">
+    <link rel="import" href="../paper-toast/paper-toast.html">
+    <link rel="import" href="../saved-request-editor/saved-request-editor.html">
+    <link rel="import" href="../saved-request-detail/saved-request-detail.html">
+    <link rel="import" href="../bottom-sheet/bottom-sheet.html">
+    <link rel="import" href="../http-code-snippets/http-code-snippets.html">
+    <link rel="import" href="arc-request-workspace.html">
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
-      .vertical-section-container {
-        max-width: 1100px;
+      body,
+      html {
+        background-color: #e5e5e5;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
       }
 
       .card {
@@ -53,6 +67,46 @@
         margin-top: 20px;
         margin-bottom: 20px;
         box-sizing: border-box;
+        background-color: #fff;
+      }
+
+      .app {
+        @apply --layout-horizontal;
+        height: 100vh;
+      }
+
+      nav {
+        min-width: 256px;
+        width: 256px;
+        height: 100vh;
+        background-color: #fff;
+      }
+
+      saved-menu {
+        overflow: auto;
+        width: 256px;
+        height: 100vh;
+      }
+
+      .main {
+        @apply --layout-flex;
+        height: 100vh;
+        overflow: auto;
+        margin: 0 24px;
+      }
+
+      arc-request-workspace {
+        width: 100%;
+        max-width: 1100px;
+      }
+
+      .main > div {
+        max-width: 1100px;
+      }
+
+      bottom-sheet {
+        width: 60%;
+        max-width: 700px;
       }
       </style>
     </custom-style>
@@ -65,20 +119,45 @@
     <oauth1-authorization></oauth1-authorization>
     <arc-request-logic></arc-request-logic>
     <request-hooks-logic></request-hooks-logic>
+    <project-model></project-model>
+    <request-model></request-model>
     <dom-bind id="demo">
       <template is="dom-bind">
-        <div class="vertical-section-container centered card" role="main">
-          <arc-request-workspace redirect-uri="[[oauth2RedirectUri]]"></arc-request-workspace>
-        </div>
+        <div class="app">
+          <nav>
+            <saved-menu on-navigate="_selectRequest"></saved-menu>
+          </nav>
+          <section class="main">
+            <div class="centered card">
+              <arc-request-workspace redirect-uri="[[oauth2RedirectUri]]"></arc-request-workspace>
+            </div>
 
-        <div class="vertical-section-container centered card">
-          <h4>Demo: Variables editor</h4>
-          <variables-editor></variables-editor>
+            <div class="centered card">
+              <paper-button on-click="generateData">Generate 100 saved items</paper-button>
+              <paper-button on-click="clearData">Clear datastore</paper-button>
+            </div>
+
+            <div class="vertical-section-container centered card">
+              <h4>Demo: Variables editor</h4>
+              <variables-editor></variables-editor>
+            </div>
+          </section>
         </div>
+        <bottom-sheet opened="{{editorOpened}}" on-iron-overlay-opened="_resizeSheetContent" with-backdrop>
+          <saved-request-editor id="requestEditor" on-cancel-request-edit="_cancelRequestEdit" on-save-request="_saveRequestEdit"></saved-request-detail>
+        </bottom-sheet>
+        <bottom-sheet opened="{{detailsOpened}}" on-iron-overlay-opened="_resizeSheetContent" with-backdrop>
+          <saved-request-detail id="requestDetails" on-delete-request="_deleteRequestDetails" on-edit-request="_editRequestDetails"></saved-request-detail>
+        </bottom-sheet>
+        <bottom-sheet opened="{{snippetsOpened}}" on-iron-overlay-opened="_resizeSheetContent" with-backdrop>
+          <http-code-snippets url="[[snippetRequest.url]]" method="[[snippetRequest.method]]" headers="[[snippetRequest.headers]]" payload="[[snippetRequest.payload]]"></http-code-snippets>
+        </bottom-sheet>
       </template>
     </dom-bind>
+    <paper-toast id="genToast" text="The request data has been generated"></paper-toast>
+    <paper-toast id="clearToast" text="The request data has been removed"></paper-toast>
     <script>
-    /* global DataGenerator */
+    /* global DataGenerator, chance */
     (function(app) {
       const redirectUrl = location.href.replace(/request-editor\/demo\/(index\.html)?/,
         'oauth-authorization/oauth-popup.html');
@@ -146,35 +225,161 @@
           }));
         });
       };
-      /**
-       * Mimics workspace restoration process
-       */
       app._restoreHandler = function(e) {
         e.preventDefault();
-        e.detail.result = new Promise((resolve) => {
-          const saved = DataGenerator.generateSavedRequestData({
-            requestsSize: 3
-          });
-          const history = DataGenerator.generateHistoryRequestsData({
-            requestsSize: 3
-          });
-          const requests = history.concat(saved.requests);
-          const result = {
-            selected: 1,
-            environment: 'default',
-            requests
-          };
-          resolve(result);
+        e.detail.result = Promise.resolve({
+          selected: 0,
+          environment: 'default',
+          requests: []
         });
+        // e.detail.result = new Promise((resolve) => {
+        //   const saved = DataGenerator.generateSavedRequestData({
+        //     requestsSize: 3
+        //   });
+        //   const history = DataGenerator.generateHistoryRequestsData({
+        //     requestsSize: 3
+        //   });
+        //   const requests = history.concat(saved.requests);
+        //   const result = {
+        //     selected: 1,
+        //     environment: 'default',
+        //     requests
+        //   };
+        //   resolve(result);
+        // });
       };
 
       app._storeHandler = function(e) {
         e.preventDefault();
         console.info('Storing workspace data', e.detail.value);
       };
+
+      app.generateData = function() {
+        DataGenerator.insertSavedRequestData({
+          requestsSize: 100
+        })
+        .then(() => {
+          document.getElementById('genToast').opened = true;
+          document.body.dispatchEvent(new CustomEvent('data-imported', {
+            bubbles: true
+          }));
+        });
+      };
+      app.clearData = function() {
+        DataGenerator.destroySavedRequestData()
+        .then(() => {
+          document.getElementById('clearToast').opened = true;
+          document.body.dispatchEvent(new CustomEvent('datastore-destroyed', {
+            detail: {
+              datastore: 'all'
+            },
+            bubbles: true
+          }));
+        });
+      };
+      app._selectRequest = function(e) {
+        const ev = new CustomEvent('request-object-read', {
+          bubbles: true,
+          cancelable: true,
+          detail: {
+            id: e.detail.id,
+            type: 'saved'
+          }
+        });
+        document.body.dispatchEvent(ev);
+        ev.detail.result
+        .then((result) => {
+          const workspace = document.querySelector('arc-request-workspace');
+          const index = workspace.findRequestIndex(result._id);
+          if (index === -1) {
+            workspace.appendRequest(result);
+          } else {
+            workspace.selected = index;
+          }
+        });
+      };
+      //
+      // Save request flow
+      //
+      app._saveRequestHandler = function(e) {
+        const editor = document.getElementById('requestEditor');
+        editor.request = e.detail.request;
+        app.editorOpened = true;
+      };
+
+      app._resizeSheetContent = function(e) {
+        const panel = e.target.querySelector(
+          'saved-request-editor,saved-request-detail,http-code-snippets');
+        if (panel.notifyResize) {
+          panel.notifyResize();
+        }
+      };
+
+      app._cancelRequestEdit = function() {
+        const editor = document.getElementById('requestEditor');
+        app.editorOpened = false;
+        editor.request = undefined;
+      };
+
+      app._saveRequestEdit = function() {
+        const editor = document.getElementById('requestEditor');
+        app.editorOpened = false;
+        editor.request = undefined;
+      };
+      //
+      // Request details flow
+      //
+      app._requestDetailsHandler = function(e) {
+        const editor = document.getElementById('requestDetails');
+        editor.request = e.detail.request;
+        app.detailsOpened = true;
+      };
+      app._editRequestDetails = function() {
+        const request = document.getElementById('requestDetails').request;
+        app.detailsOpened = false;
+        document.getElementById('requestEditor').request = request;
+        app.editorOpened = true;
+      };
+      app._deleteRequestDetails = function(e) {
+        app.detailsOpened = false;
+        const request = e.target.request;
+        e.target.request = undefined;
+        if (!request._rev || !request._id) {
+          return;
+        }
+        document.body.dispatchEvent(new CustomEvent('request-object-deleted', {
+          detail: {
+            type: request.type,
+            id: request._id
+          },
+          bubbles: true,
+          cancelable: true
+        }));
+      };
+      //
+      // Code snippets flow
+      //
+      app._renderCodeSnippets = function(e) {
+        const request = e.detail.request;
+        app.snippetRequest = request;
+        app.snippetsOpened = true;
+      };
+      //
+      // Google drive export flow
+      //
+      app._exportDriveHandler = function(e) {
+        e.preventDefault();
+        e.detail.result = Promise.resolve({
+          id: chance.guid({version: 5})
+        });
+      };
       window.addEventListener('transport-request', app.send);
       window.addEventListener('preferences-read', app._restoreHandler);
       window.addEventListener('preferences-store', app._storeHandler);
+      window.addEventListener('request-save-state', app._saveRequestHandler);
+      window.addEventListener('request-details', app._requestDetailsHandler);
+      window.addEventListener('request-code-snippets', app._renderCodeSnippets);
+      window.addEventListener('export-google-drive', app._exportDriveHandler);
     })(document.getElementById('demo'));
   </script>
   </body>
